--- a/style/index.css
+++ b/style/index.css
@@ -49,7 +49,7 @@ header nav a:hover{
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
-    width: 59.5%;
+    width: 100%;
     padding-bottom: 2%;
 }
 body {
@@ -199,6 +199,21 @@ footer nav a {
 }
 @media(max-width:500px){
     body{
-        font-size: 30rem;
+        font-size: .9rem;
+    }
+    .banner{
+        width:20%;
+    }
+    header nav a{
+        flex-direction: column;
+    }
+    .middle-content .boxes{
+        flex-direction: column;
+        align-items: center;
+    }
+    .container{
+        font-size: .85rem;
+        display:flex;
+        flex-direction: column;
     }
 }
