--- a/style/index.css
+++ b/style/index.css
@@ -200,11 +200,24 @@ footer nav a {
     body{
         font-size: .9rem;
     }
-    .banner{
-        width:90%;
+    .banner img{
+    width: 100%;
+    align-self: baseline;
+    }
+    header nav{
+        display:flex;
+        flex-wrap:wrap;
+        flex-direction: column;
+        align-items:center;
     }
     header nav a{
-        flex-direction: column;
+        display:block;
+        border:1px solid grey;
+        border-radius: 10%;
+        width:50%;
+        background-color: lightgray;
+        padding: 2%;
+        text-align: center;
     }
     .top-content {
         display: flex;
